#151 fixed whitespace between header and content

--- a/showcase/src/main/webapp/resources/less/custom/custom.less
+++ b/showcase/src/main/webapp/resources/less/custom/custom.less
@@ -16,7 +16,7 @@ sub {
 
 .butter-component-info {
     .baseFontDesign;
-    margin-top: 15px;
+    padding-top: 15px;
 }
 
 .content {
